--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -61,7 +61,7 @@
     </div>
   </div>
 </div>
-<a class="nav-customAS" data-toggle="modal" data-target="#modalLRForm">Host<span class="span-span">*</span></a>
+<a class="nav-customAS button sparkle u-hover--sparkle" data-toggle="modal" data-target="#modalLRForm">Host<span class="span-span">*</span></a>
 
 
 
