--- a/src/app/components/homepage/menu-bar/menu-bar.component.html
+++ b/src/app/components/homepage/menu-bar/menu-bar.component.html
@@ -29,7 +29,7 @@
         <a class="nav-link sparkle u-hover--sparkle" routerLink="/signup-homepage">Đăng ký</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link button sparkle u-hover--sparkle" ><app-login></app-login></a>
+        <a class="nav-link" ><app-login></app-login></a>
       </li>
       <li class="nav-item">
         <a class="nav-link sparkle u-hover--sparkle" *ngIf="checkLogin === 'false' ? true : false">{{customerName}}</a>
