--- a/src/app/components/homepage/body-news/body-news.component.html
+++ b/src/app/components/homepage/body-news/body-news.component.html
@@ -4,11 +4,12 @@
     <div class="box col-sm-12 col-md-6" *ngFor="let house of listHouse">
       <div class="card">
         <div class="imgBx">
-          <img [src]="house.picture[0].tenAnh" alt="images">
+          <img src="{{house.picture[0].tenAnh}}" alt="images">
         </div>
         <div class="details">
-          <h2>{{house.tenNha}}<br><span>{{house.giaTienTheoDem}}$/Đêm</span><br><button class="detail-butoon" routerLink="/views/{{house.idNha}}">Chi tiết</button>
-            <button class="detail-butoon" routerLink="/user/1">Thuê Nhà  </button>
+          <h2>{{house.tenNha}}<br><span>{{house.giaTienTheoDem}}$/Đêm</span><br>
+            <button class="detail-butoon" *ngIf="!isShowForm"  routerLink="/login-homepage">Thuê Nhà  </button>
+            <button class="detail-butoon" *ngIf="isShowForm"  routerLink="/views/{{house.idNha}}">Thuê Nhà  </button>
           </h2>
 
         </div>
