--- a/src/app/components/user/house-list/house-list.component.html
+++ b/src/app/components/user/house-list/house-list.component.html
@@ -34,6 +34,7 @@
                   <button class="btn btn-success btn-xs" routerLink='/user/house-details/{{house.idNha}}' (click)="findId(house.id)"> <i class="fa fa-eye"></i> Show details</button>
                   <button class=" btn btn-info btn-xs" routerLink='/user/edit/{{house.idNha}}' (click)="findId(house.id)"> <i class="fa fa-edit"></i>Edit</button>
                   <button class="btn btn-danger btn-xs" (click)="delete(house.idNha)"> <i class="fa fa-times"></i> Delete</button>
+                  <button class="btn btn-danger btn-xs" routerLink='/history/{{house.idNha}}'> <i class="fa fa-times"></i> Lịch sử thuê nhà</button>
                 </td>
 
               </tr>
