--- a/src/app/components/user/show-detail-user/show-detail-user.component.html
+++ b/src/app/components/user/show-detail-user/show-detail-user.component.html
@@ -123,7 +123,7 @@
                     </strong>
                   </td>
                   <td class="text-primary">
-                    <button class="btn-danger" routerLink="/login">Đăng xuất</button>
+                    <button class="btn-danger" routerLink="/">Đăng xuất</button>
                   </td>
                 </tr>
 
